# src/common/entities/Coordinate.ts
@@ -1,0 +1,9 @@
+export interface CoordinateInterface {
+  latitude: number;
+  longitude: number;
+}
+
+export class Coordinate implements CoordinateInterface {
+  latitude = 0;
+  longitude = 0;
+}
